--- a/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
+++ b/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
@@ -30,3 +30,41 @@ const onSave = useCallback(() => {
 }, [name]);//name이 변경될 때에만 함수 재생성.
 ```
 
+
+
+## 01-2 커스텀 훅 만들기
+
+- 함수의 중복 제거(email, nickname)
+- 섣불리 중복을 제거하려고 하지 말아야 한다.
+
+
+
+### `hooks\useInput.ts`
+
+- useState를 이용해 useInput hooks를 만든다.
+
+- TS는 매개변수의 타입은 잘 추론하지 못한다. 그래서 꼭 명시해주어야 한다. (인라인 콜백함수 제외)
+- initialData: any 혹은 T(제너릭)를 사용해 에러를 막는다.
+  - 제너릭: 인풋값의 타입을 정해주면 리턴값의 타입도 자동으로 동일하게 판단한다.
+
+- Dispatch: useState의 set 함수의 TS에서의 타입
+  - https://basemenks.tistory.com/241
+
+
+
+```typescript
+import { Dispatch, SetStateAction, useCallback, useState } from 'react';
+
+type Handler = (e: any) => void;
+type ReturnTypes<T = any> = [T, Handler, Dispatch<SetStateAction<T>>];
+const useInput = <T = any>(initialValue: T): ReturnTypes<T> => {
+  const [value, setValue] = useState(initialValue);
+  const handler = useCallback((e) => {
+    setValue(e.target.value);
+  }, []);
+  return [value, handler, setValue];
+};
+
+export default useInput;
+```
+
