--- a/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
+++ b/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
@@ -68,3 +68,161 @@ const useInput = <T = any>(initialValue: T): ReturnTypes<T> => {
 export default useInput;
 ```
 
+
+
+## 01-3 axios로 요청 보내기와 CORS, proxy
+
+- BE에서 남겨준 api 문서를 보고 api 요청을 보낸다.
+- url의 맨 앞에는 기본적으로 `/api`
+- tip: `.finally()` 안에는 성공하든 실패하든 실행되는 코드를 넣는다.
+- 요청 보낼 때 console의 Network 탭 꼭 공부하기
+
+```tsx
+const onSubmit = useCallback(
+  (e) => {
+    e.preventDefault();
+    if (!nickname || !nickname.trim()) {
+      return;
+    }
+    if (!mismatchError) {
+      setSignUpError(false);
+      setSignUpSuccess(false);
+      axios
+        .post('/api/users', { email, nickname, password })
+        .then(() => {
+          setSignUpSuccess(true);
+        })
+        .catch((error) => {
+          // console.log(error.response?.data);
+          setSignUpError(error.response?.data?.code === 403);
+        });
+    }
+  },
+  [email, nickname, password, mismatchError],
+);
+
+```
+
+
+
+### CORS
+
+https://docs.aws.amazon.com/ko_kr/apigateway/latest/developerguide/how-to-cors.html
+
+#### 프론트에서 CORS 설정을 하는 방법
+
+- BE와 FE 서버 모두 localhost일 때만 가능하다.
+
+```tsx
+  devServer: {
+    historyApiFallback: true,
+    port: 3090,
+    devMiddleware: { publicPath: '/dist/' },
+    static: { directory: path.resolve(__dirname) },
+    proxy: {
+      '/api/': {
+        target: 'http://localhost:3095',
+        changeOrigin: true,
+        ws: true,
+      },
+    },
+  },
+
+// webpack.config.ts
+// proxy 설정: 프론트에서 /api/로 시작하는 요청은 3095로 보내겠다는 말.
+```
+
+
+
+## 01-4 swr 사용하기
+
+#### `npm i swr`
+
+swr: 데이터를 가져오기 위한 React Hooks입니다. Next.js를 개발한 zeit 그룹에서 사용하는 라이브러리입니다. SWR은 Stale-While-Revalidate의 줄임말로 백그라운드에서 캐시를 재검증(revalidate)하는 동안에 기존의 캐시 데이터(stale)를 사용하여 화면을 그려줍니다. 도중에 에러를 반환하더라도 캐시된 데이터를 활용할 수 있게 함으로써 불필요한 데이터 호출과 렌더링에 시간을 쓰지 않고 효율적으로 동작합니다.
+
+(https://velog.io/@soryeongk/SWRBasic)
+
+
+
+1. fetcher 함수를 utils 폴더 안에 만들어주어야 한다.
+
+   ```tsx
+   import axios from 'axios';
+   
+   // BE에서 생성되는 쿠키를 기억하고 BE로 보내주는 withCredentials
+   const fetcher = (url: string) => axios.get(url, { withCredentials: true }).then((response) => response.data);
+   
+   export default fetcher;
+   ```
+
+   
+
+
+
+#### 소스코드
+
+```tsx
+
+const LogIn = () => {
+    // useSWR()의 역할은 url을 fetcher 함수의 매개변수로 넘겨주는 것이다.
+  const { data: userData, error, mutate } = useSWR('/api/users', fetcher);
+    // fetcher 함수가 return 해 준 data가 
+  const [logInError, setLogInError] = useState(false);
+  const [email, onChangeEmail] = useInput('');
+  const [password, onChangePassword] = useInput('');
+  const onSubmit = useCallback(
+    (e) => {
+      e.preventDefault();
+      setLogInError(false);
+      axios
+        .post(
+          '/api/users/login',
+          { email, password },
+          {
+            withCredentials: true,
+          },
+        )
+        .then(() => {
+          mutate();
+        })
+        .catch((error) => {
+          setLogInError(error.response?.data?.code === 401);
+        });
+    },
+    [email, password, mutate],
+  );
+
+  console.log(error, userData);
+  if (!error && userData) {
+    // console.log('로그인됨', userData);
+    return <Redirect to="/workspace/sleact/channel/일반" />;
+  }
+
+  return (
+    <div id="container">
+      <Header>Sleact</Header>
+      <Form onSubmit={onSubmit}>
+        <Label id="email-label">
+          <span>이메일 주소</span>
+          <div>
+            <Input type="email" id="email" name="email" value={email} onChange={onChangeEmail} />
+          </div>
+        </Label>
+        <Label id="password-label">
+          <span>비밀번호</span>
+          <div>
+            <Input type="password" id="password" name="password" value={password} onChange={onChangePassword} />
+          </div>
+          {logInError && <Error>이메일과 비밀번호 조합이 일치하지 않습니다.</Error>}
+        </Label>
+        <Button type="submit">로그인</Button>
+      </Form>
+      <LinkContainer>
+        아직 회원이 아니신가요?&nbsp;
+        <a href="/signup">회원가입 하러가기</a>
+      </LinkContainer>
+    </div>
+  );
+};
+```
+
