--- a/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
+++ b/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
@@ -226,3 +226,28 @@ const LogIn = () => {
 };
 ```
 
+
+
+## 01-5 워크스페이스 만들기 + 로그아웃하기
+
+- SWR이 전역적으로 데이터를 관리해주는 상태
+
+
+
+```tsx
+const Channel = () => {
+    return (
+    	<Workspace>
+            <div>로그인하신 것을 축하드려요!</div>
+        </Workspace>
+    );
+};
+
+export default Channel;
+```
+
+- `<div>` 태그는 Workspace의 `{ children }`이 된다.
+
+
+
+- hooks보다 아래에 return이 위치해야 한다(위치 조심)
