--- a/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
+++ b/All about FE/React/[inflearn]Slack-clone-coding/강의-노트-정리/01 로그인, 회원가입 만들기.md
@@ -256,5 +256,12 @@ export default Channel;
 
 ## 01-6 swr 활용법(optimistic ui)
 
+### mutate와 revalidate의 차이
 
+```react
+const { data, error, revalidate, mutate } = useSWR('http://loalhost:3095/api/users', fetcher);
+```
+
+- mutate: 서버에 데이터 다시 요청
+- revalidate: 데이터를 다시 요청하지 않고 데이터를 수정
 
