fix image assets

--- a/Back-end/Nestjs/탄탄한-백엔드-NestJS-기초부터-심화까지/02-NestJS를-위한-express-핵심-원리/03-고양이-데이터-모킹하기.md
+++ b/Back-end/Nestjs/탄탄한-백엔드-NestJS-기초부터-심화까지/02-NestJS를-위한-express-핵심-원리/03-고양이-데이터-모킹하기.md
@@ -21,7 +21,7 @@ app.listen(8000, () => {
 })
 ```
 
-![image-20221223113841321](C:\Users\hyerin\AppData\Roaming\Typora\typora-user-images\image-20221223113841321.png)
+![image-20221223113841321](03-고양이-데이터-모킹하기.assets/image-20221223113841321.png)
 
 # 실습
 
@@ -155,4 +155,4 @@ app.get('/', (req: express.Request, res: express.Response) => {
 } )
 ```
 
-![image-20221223114708447](C:\Users\hyerin\AppData\Roaming\Typora\typora-user-images\image-20221223114708447.png)
+![image-20221223114708447](03-고양이-데이터-모킹하기.assets/image-20221223114708447.png)
