--- a/ETC/TDD/발표 대본.md
+++ b/ETC/TDD/발표 대본.md
@@ -1,61 +1,123 @@
-# 발표 대본
-
 [TOC]
 
-## Intro
+# Intro
 
-안녕하세요 오늘 프론트엔드에서의 TDD, 테스트 주도 개발에 대해 발표할 김혜린이라고 합니다. 백엔드에서도 JUnit과 같은 테스트 도구들이 있는데, 프론트엔드를 맡고 있기도 하고 프론트엔드는 UI를 다루기에 테스팅이 더욱 어렵다고 알려져 있어 프론트엔드에 방점을 두고 준비했습니다. 하지만 TDD의 개념, 장점 등은 프론트엔드와 백엔드의 구분이 없기 때문에 크게 구분하지 않고 들어주시면 감사하겠습니다.
+안녕하세요 오늘 프론트엔드에서의 TDD, 테스트 주도 개발에 대해 발표할 김혜린이라고 합니다. 백엔드에서도 JUnit과 같은 테스트 도구들이 있는데, 프론트엔드를 맡고 있기도 하고 프론트엔드는 UI를 다루기에 테스팅이 더욱 어렵다고 알려져 있어 실습은 프론트엔드에 방점을 두고 준비했습니다. 하지만 TDD의 개념, 장점 등은 프론트엔드와 백엔드의 구분이 없기 때문에 크게 구분하지 않고 들어주시면 감사하겠습니다.
 
-## 테스트 코드, 작성하시나요?
+# 테스트 코드, 작성하시나요?
+
+## Not really...^^
 
 TDD, 괜히 영어 약자라서 그렇지 쉽습니다. 어떤 기능을 작성할 때 테스트 코드를 작성하고, 그것을 통과하는 코드를 작성한다는 개념입니다. 그래서 "테스트 '기반' 개발" 입니다.
 
 - 일정에 치임
 - 힘듦
 - 나중에 하면 됨...이라고 하다가 나중은 절대 오지 않음
+  - 제가 예전에 개발했던 독서 기록장 앱의 OCR 코드인데, 오류 지점을 찾지 못해 이틀을 버리고 나서도 컴포넌트 분리나 테스팅 코드가 없이 아직도 이렇게 GitHub에 있다.
+
 
 그럼에도 불구하고, TDD는 한 번 살펴볼 만 합니다!
 
-## TDD란?
+# TDD란?
 
 TDD는 소프트웨어 개발자가 테스트를 실행할 프로덕션 코드를 만들기 전에 테스트를 먼저 작성하는 방식이다. 이 기술의 기본적인 발상은 실제 코드를 작성하기 전에 코드 작성자가 전체적인 설계나 요구 사항에 대해 생각하는 시간을 주는 것이다.
 
-### 켄트 백(1961~)
+TDD는 "테스트는 중요하니까 제일 먼저 써!"라는 훈계가 아니라 어떻게 하면 좋은 소프트웨어 디자인을 유도할 수 있는 가에 대한 방법론이었다. "기능 스펙" → "작동하는 코드"로 가는 과정은 쉽지 않다. 하얀 도화지를 어떻게 채울지 막막할 때도 많다. TDD는 이럴 때  유용하다.
+
+시작부터 테스트를 작성하는 건 내가 작성하는 코드의 사용자의 관점으로 문제를 본다는 걸 의미한다. 유저 입장에선 어떤 인터페이스가 편할지 생각해보고 테스트 코드를 짜며 "사용"해본다. 디자인의 윤곽이 잡히면 구현 코드를 짜 본다. 다시 테스트 코드를 짜며 나의 코드를 "사용"해본다. 반복.
+
+## TDD를 집대성한 켄트 백(1961~)
 
 이력: 페이스북 근무, XP 기법 창시, TDD by Example 책으로 TDD를 다시 집대성함
 
-### TDD의 목표
+## TDD의 목표
 
-Clean code that works
+Clean code that works.
 
-### TDD는 왜 좋은가?
+'작동하는' '깔끔한' 코드를 얻기 위해 두 부분을 분리해야 한다. 그래서 TDD를 하며 먼저 “작동하는 코드” 부분을 해결하고 그 다음 “깔끔한 코드” 부분을 해결하는 것이다.
 
-### TDD cycle
+## TDD는 왜 좋은가?
 
 
 
-cycle만 보면 간단해 보이지만, test가 가능한 코드를 설계하는 것이 더 중요하다.
+## TDD cycle
 
-## Live Coding
+![Screenshot](발표 대본.assets/TDD_Graphic.jpg)
 
-## No Silver Bullet
+TDD 사이클은 이렇다. 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
 
-- TDD는 만능이 아니며, 설계
+cycle만 보면 간단해 보이지만, test가 가능한 코드를 설계하는 것이 중요하다.
 
-## 그럼에도 불구하고 TDD를 써야 하는 이유
+왜냐하면 모든 코드가 testable, 테스트 가능하지 않기 때문이다.
 
+testable한 코드를 만드는 것은 '관심사의 분리'를 통해 이루어 진다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙이다.
+
+이것을 지키지 않으면 순식간에 코드가 진흙 덩어리가 되고 만다. 마치 저의 OCR 코드처럼!
+
+# Live Coding(Todo App 만들기)
+
+## BDD(Behavior Driven Development)
+
+TDD랑 큰 차이는 없으나, 단위로 생각하는 것이 어렵기 때문에? 어떤 행위 중심으로 생각해본다는 것이다. 상황에 따라 다르게 행동한다는 것이다. 이 때 유용하게 쓰는 것이 describe context it 템플릿이다.
+
+**BDD**는 시나리오를 기반으로 테스트 케이스를 작성하며 함수 단위 테스트를 권장하지 않는다. 이 시나리오는 비개발자가 봐도 이해할 수 있을 정도의 레벨로 작성하는 것을 권장하기 때문에 특수 영어가 없고 이해하기 쉽게 소통 가능한 것은 BDD의 장점으로 기술팀과 비 기술팀 사이에서 협업을 더 효율적으로 진행할 수 있다.
+
+TDD를 근간으로 파생되었기에 테스트 케이스 자체가 요구 사양이 되도록 하는 개발 방식이고 "이 클래스가 어떤 행위를 해야 한다"라는 개념을 문장으로 작성해 행위를 위한 테스트에 집중을 할 수 있다.
+
+## Todo App 만들기
+
+# No Silver Bullet
+
+- TDD는 만능이 아니며, 설계 방법론이 아니다.
+- 좋은 설계 없이 TDD만으로 좋은 설계를 만들 수 있는 것은 아니며, 실제로 많은 테스트를 잘 통과하면서도 좋지 않은, SOLID 원칙에 잘 맞지 않는 코드들이 많다고 한다.
+
+# 그럼에도 불구하고 TDD를 도입해 볼 이유는
+
+- 지뢰 탐지기
 - 미래의 빅:poop:을 현재의 스몰 :poop:으로 가져와 비용을 절감합니다.
+- 테스팅을 위해 요구 사항을 명확하게 하는 습관이 생기고, 생각도 잘 해보게 된다는 이점이 있다. 
 - 당장 TDD를 도입하기 어렵다면, SRP를 잘 지키는 것부터 시작하고, 내가 사용할 수 있는 최선의 테스트 도구를 사용해보자(Turbo Console Log)
 
-- 위의 내용들은 통계로도 증명이 되어 있습니다. 자세한 내용은 이 링크를 참고하시는 것이 좋습니다.
+- 미래 코드를 만질 사람들이 좋아할 것이다.
 
-## 보너스
+- 위의 내용들은 통계로도 증명이 되어 있다. 내용은 이렇습니다. 자세한 내용은 이 링크를 참고하시는 것이 좋다.
 
-### BDD
+- 예제로 스펙이 표현되어 있다는 것이 가장 중요하다. 용례가 전부 나와 있다. 이는 책 테스트 주도 개발 책에도 잘 강조가 되어 있다. 예상되는 결과 그리고 그 결과를 내는 과정을 명확히 적는 것이 TDD라고 할 수 있다. 그래서 테스트를 보면 어떻게 쓰면 되는 거구나 라는 걸 알 수 있다.
 
-## 참고 문헌
+- 결국 TDD는 테스팅 툴이라기 보다 구현에만 집중하는 것이 아니라 인터페이스에 집중해 코드를 작성해 코드의 퀄리티와 시스템 전반의 설계가 향상될 수 있으며, 개발 집중력도 향상될 수 있다고 한다. 저만 해도 이런 강제성이 없을 때는 컴포넌트를 분리하려는 노력 자체가 크게 줄어든다. Clean code를 위한 원칙을 수립한다는 것에 의미가 있다고 본다. 좋은 소프트웨어 디자인을 유도하는 방법론이다. 시작부터 테스트를 작성하는 건 내가 작성하는 코드의 사용자의 관점으로 문제를 본다는 걸 의미한다. 유저 입장에선 어떤 인터페이스가 편할지 생각해보고 테스트 코드를 짜며 사용해본다. 디자인의 윤곽이 잡히면 구현 코드를 짜 본다. 다시 테스트 코드를 짜며 나의 코드를 사용해본다. 반복. 탄탄한 테스트를 바탕으로 더욱 더 과감한 리팩터링도 가능하니 구현 토드의 완성도도 높아진다.
 
-## Outro
+- 비즈니스 상황에 따라서 천천히 도입하고, E2E 테스트부터 시작해보라.
 
-- 참고 문헌 링크를 공유
+# 참고 문헌
+
+발표를 위해서 클린 코드, 테스트 주도 개발과 같은 책들과 컨퍼런스 영상들 그리고 현업 개발자분들의 블로그를 참고했습니다. 링크는 스터디 후에 따로 공유를 드리겠습니다.
+
+## 도서
+
+'Clean Code'(로버트 C. 마틴, 인사이트, 2013.12.24)
+
+''테스트 주도 개발'(켄트 벡, 인사이트, 2014.02.15)
+
+## 영상 & 글
+
+[TDD는 기존 개발 방법론과 뭐가 다르지?(한빛미디어)](https://www.hanbit.co.kr/channel/category/category_view.html?cms_code=CMS6706987091&amp;cate_cd=)
+
+["TDD는 버그를 없애주나요?" 테스트주도개발에 대한 편견과 오해 바로잡기](https://fastcampus.co.kr/story_article_tdd)(패스트캠퍼스)
+
+[프론트엔드 개발자의 TDD 적응하기](https://blog.wadiz.kr/%ED%94%84%EB%A1%A0%ED%8A%B8%EC%97%94%EB%93%9C-%EA%B0%9C%EB%B0%9C%EC%9E%90%EC%9D%98-tdd-%EC%A0%81%EC%9D%91%ED%95%98%EA%B8%B0/)(와디즈 FE개발팀 홍전일)
+
+[프론트엔드에서 TDD가 가능하다는 것을 보여드립니다.(2022 FEConf 최수형)](https://www.youtube.com/watch?v=L1dtkLeIz-M)
+
+[프론트엔드 개발과 테스트 주도 개발(우아한형제들 개발자 김정환님 발표)](https://www.slideshare.net/jeonghwankim11/ss-78600304?refer=%EA%B0%9C%EB%B0%9C%EC%9E%90%EC%8A%A4%EB%9F%BD%EB%8B%A4)
+
+[TDD를 해야 하는 이유](https://www.youtube.com/watch?v=j09W0KSofOk)(코딩의 신 아샬 | 시드웨일)
+
+[TDD의 핵심](https://www.youtube.com/watch?v=Bogx86KKp5o)(코딩의 신 아샬 | 시드웨일)
+
+[Kent Beck의 테스트 주도 개발 책을 읽고.](Kent Beck의 테스트 주도 개발 책을 읽고.)(Google Firebase Daniel Lee)
+
+# Outro
+
 - 책 대여 가능
+
+이상으로 마치겠습니다. 들어주셔서 감사합니다.
