--- a/ETC/TDD/발표 대본.md
+++ b/ETC/TDD/발표 대본.md
@@ -1,14 +1,16 @@
 [TOC]
 
-# Intro
+# 1 Intro
 
-안녕하세요 오늘 프론트엔드에서의 TDD, 테스트 주도 개발에 대해 발표할 김혜린이라고 합니다. 백엔드에서도 JUnit과 같은 테스트 도구들이 있는데, 프론트엔드를 맡고 있기도 하고 프론트엔드는 UI를 다루기에 테스팅이 더욱 어렵다고 알려져 있어 실습은 프론트엔드에 방점을 두고 준비했습니다. 하지만 TDD의 개념, 장점 등은 프론트엔드와 백엔드의 구분이 없기 때문에 크게 구분하지 않고 들어주시면 감사하겠습니다.
+안녕하세요 오늘 프론트엔드에서의 TDD, 테스트 주도 개발에 대해 발표할 김혜린이라고 합니다. 테스트 주도 개발은 말 그대로 테스트 코드를 작성하고 그것을 기반으로 개발하는 방법을 말하는 데요 백엔드에서도 JUnit과 같은 테스트 도구들이 있는데, 프론트엔드를 맡고 있다 보. 하지만 TDD의 개념, 장점 등은 프론트엔드와 백엔드의 구분이 없기 때문에 크게 구분하지 않고 들어주시면 감사하겠습니다.
 
 # 테스트 코드, 작성하시나요?
 
 ## Not really...^^
 
 이유가 있습니다.
+
+일단 일반적으로 일정이 빠듯합니다. 기획, 디자인, 
 
 - 일정에 치임
 - 힘듦
@@ -22,23 +24,25 @@
 
 TDD, 괜히 영어 약자라서 그렇지 쉽습니다. 어떤 기능을 작성할 때 테스트 코드를 작성하고, 그것을 통과하는 코드를 작성한다는 개념입니다. 그래서 "테스트 '기반' 개발" 입니다.
 
-TDD는 소프트웨어 개발자가 테스트를 실행할 프로덕션 코드를 만들기 전에 테스트를 먼저 작성하는 방식이다. 이 기술의 기본적인 발상은 실제 코드를 작성하기 전에 코드 작성자가 전체적인 설계나 요구 사항에 대해 생각하는 시간을 주는 것이다.
 
-TDD는 "테스트는 중요하니까 제일 먼저 써!"라는 훈계가 아니라 어떻게 하면 좋은 소프트웨어 디자인을 유도할 수 있는 가에 대한 방법론이었다. "기능 스펙" → "작동하는 코드"로 가는 과정은 쉽지 않다. 하얀 도화지를 어떻게 채울지 막막할 때도 많다. TDD는 이럴 때 유용하다.
-
-시작부터 테스트를 작성하는 건 내가 작성하는 코드의 사용자의 관점으로 문제를 본다는 걸 의미한다. 유저 입장에선 어떤 인터페이스가 편할지 생각해보고 테스트 코드를 짜며 "사용"해본다. 디자인의 윤곽이 잡히면 구현 코드를 짜 본다. 다시 테스트 코드를 짜며 나의 코드를 "사용"해본다. 반복.
 
 ## TDD를 집대성한 켄트 백(1961~)
 
 이력: 페이스북 근무, XP 기법 창시, TDD by Example 책으로 TDD를 널리 알림
 
-이 책에는 TDD를 실제로 해보는 켄트 벡의 시연을 따라가는 과정이 나와 있고, TDD를 어떻게 하면 잘 할 수 있는지에 대한 방법론이 잘 나와 있습니다.
+2000년이 책에는 TDD를 실제로 해보는 켄트 벡의 시연을 따라가는 과정이 나와 있고, TDD를 어떻게 하면 잘 할 수 있는지에 대한 방법론이 잘 나와 있습니다.
 
 ## TDD의 목표
 
 Clean code that works.
 
 '작동하는' '깔끔한' 코드를 얻기 위해 두 부분을 분리해야 한다. 그래서 TDD를 하며 먼저 “작동하는 코드” 부분을 해결하고 그 다음 “깔끔한 코드” 부분을 해결하는 것이다. 테스트 주도 개발 책에서는 '두려움이 지루함으로 변할 때까지 테스트를 만들어라' 라고 하는데요, 결국 지루할 만큼 신뢰도 있고 깨끗한 코드를 만들기 전까지 테스트하라는 것입니다.
+
+TDD는 소프트웨어 개발자가 테스트를 실행할 프로덕션 코드를 만들기 전에 테스트를 먼저 작성하는 방식이다. 이 기술의 기본적인 발상은 실제 코드를 작성하기 전에 코드 작성자가 전체적인 설계나 요구 사항에 대해 생각하는 시간을 주는 것이다.
+
+TDD는 "테스트는 중요하니까 제일 먼저 써!"라는 훈계가 아니라 어떻게 하면 좋은 소프트웨어 디자인을 유도할 수 있는 가에 대한 방법론이었다. "기능 스펙" → "작동하는 코드"로 가는 과정은 쉽지 않다. 하얀 도화지를 어떻게 채울지 막막할 때도 많다. TDD는 이럴 때 유용하다.
+
+시작부터 테스트를 작성하는 건 내가 작성하는 코드의 사용자의 관점으로 문제를 본다는 걸 의미한다. 유저 입장에선 어떤 인터페이스가 편할지 생각해보고 테스트 코드를 짜며 "사용"해본다. 디자인의 윤곽이 잡히면 구현 코드를 짜 본다. 다시 테스트 코드를 짜며 나의 코드를 "사용"해본다. 반복.
 
 ## TDD cycle
 
@@ -51,6 +55,20 @@ cycle만 보면 간단해 보이지만, test가 가능한 코드를 설계하는
 testable한 코드를 만드는 것은 '관심사의 분리'를 통해 이루어 진다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙이다.
 
 이것을 지키지 않으면 순식간에 코드가 진흙 덩어리가 되고 만다. 마치 저의 OCR 코드처럼!
+
+## TDD의 원칙 (from <클린 코드>)
+
+F.I.R.S.T.
+
+Fast: 테스트는 빨라야 한다.
+
+Independent: 각 테스트는 독립적이며 실행 순서에 무관하게 동작해야 한다.
+
+Repeatable: 테스트는 어떤 환경에서도 반복 가능해야 한다.
+
+Self-Validating: 테스트는 bool 값으로 결과를 내야 한다.(Success or Fail)
+
+Timely: 테스트는 테스트하려는 실제 코드를 구현하기 직전에 구현한다.
 
 # Live Coding(Todo App 만들기)
 
