--- a/ETC/TDD/발표 대본.md
+++ b/ETC/TDD/발표 대본.md
@@ -1,149 +1,210 @@
 [TOC]
 
-# 1 Intro
+# Intro
 
-안녕하세요 오늘 프론트엔드에서의 TDD, 테스트 주도 개발에 대해 발표할 김혜린이라고 합니다. 테스트 주도 개발은 말 그대로 테스트 코드를 작성하고 그것을 기반으로 개발하는 방법을 말하는 데요 백엔드에서도 JUnit과 같은 테스트 도구들이 있는데, 프론트엔드를 맡고 있다 보. 하지만 TDD의 개념, 장점 등은 프론트엔드와 백엔드의 구분이 없기 때문에 크게 구분하지 않고 들어주시면 감사하겠습니다.
+1
+
+안녕하세요 오늘 프론트엔드에서의 TDD, 테스트 주도 개발에 대해 발표할 김혜린이라고 합니다. 테스트 주도 개발은 말 그대로 테스트 코드를 작성하고 그것을 기반으로 개발하는 방법을 말하는 데요. 사실 TDD를 주제로 재성님이 6월에 발표를 해주셨는데, 개인적으로 공부를 해보고 싶었던 주제이기도 하고, 프론트엔드를 맡고 있다 보니 이번에는 React 테스팅 도구와 Jest라는 테스팅 도구를 사용한 예제와 함께 TDD에 관해 살펴보는 시간을 가지려고 합니다.
 
 # 테스트 코드, 작성하시나요?
 
+2
+
+먼저 테스트 코드 다들 작성해 보시는지 여쭤보고 싶은데요.
+
 ## Not really...^^
 
-이유가 있습니다.
+3
 
-일단 일반적으로 일정이 빠듯합니다. 기획, 디자인, 
+사실 저부터도 잘 작성하게 되지는 않습니다.  나름의 이유가 있습니다. 일단 일반적으로 일정이 빠듯합니다. 기획, 디자인, 개발, 배포까지 하려면 항상 일정이 빠듯하다 보니 늘 뒷전이었고요. 힘든 것에 비해 효과는 잘 알지 못했기에 쓰게 되지 않았습니다. 또 프로젝트 끝나고 나중에 하면 되는데, 그 나중은 한번도 오지 않았었죠 ㅎㅎ
 
-- 일정에 치임
-- 힘듦
-- 나중에 하면 됨...이라고 하다가 나중은 절대 오지 않음
-  - 제가 예전에 개발했던 독서 기록장 앱의 OCR 코드인데, 오류 지점을 찾지 못해 이틀을 버리고 나서도 컴포넌트 분리나 테스팅 코드가 없이 아직도 이렇게 GitHub에 있다.
+예시를 한 번 보면 제가 예전에 개발했던 독서 기록 앱에서 OCR 기능의 코드인데요. 여러 단계의 기능이 한 메서드 안에 들어가 있거나, UI도 한 컴포넌트에서 모두 해결하려 했었습니다. 오류 지점을 찾지 못해서 주말 이틀을 날리고 나서야 분리와 테스팅을 나중에 나마 해보기로 결심했습니다. 그런데 아직도 이렇게 GitHub에 있죠.
+
+4
 
 
-그럼에도 불구하고, TDD는 한 번 살펴볼 만 합니다!
+그럼에도 불구하고, TDD는 한 번 알아볼 만한 가치가 있다고 생각했습니다.
 
 # TDD란?
 
-TDD, 괜히 영어 약자라서 그렇지 쉽습니다. 어떤 기능을 작성할 때 테스트 코드를 작성하고, 그것을 통과하는 코드를 작성한다는 개념입니다. 그래서 "테스트 '기반' 개발" 입니다.
+6
 
-
+TDD, 괜히 영어 약자라서 그렇지 직관적인 의미를 가지고 있습니다. 어떤 기능을 작성할 때 테스트 코드를 작성하고, 그것을 통과하는 코드를 작성하는 방식으로 개발한다고 우선 이해하시면 됩니다. 그래서 "테스트 '기반' 개발" 입니다.
 
 ## TDD를 집대성한 켄트 백(1961~)
 
-이력: 페이스북 근무, XP 기법 창시, TDD by Example 책으로 TDD를 널리 알림
+7
 
-2000년이 책에는 TDD를 실제로 해보는 켄트 벡의 시연을 따라가는 과정이 나와 있고, TDD를 어떻게 하면 잘 할 수 있는지에 대한 방법론이 잘 나와 있습니다.
+TDD를 집대성했다고 할 수 있는 분은 켄트 벡이라는 개발자인데요. 책에서 많이 보셨을 XP 프로그래밍 기법을 창시했으며, TDD의 교과서라고 볼 수 있는 책을 썼습니다.
 
 ## TDD의 목표
 
-Clean code that works.
+8
 
-'작동하는' '깔끔한' 코드를 얻기 위해 두 부분을 분리해야 한다. 그래서 TDD를 하며 먼저 “작동하는 코드” 부분을 해결하고 그 다음 “깔끔한 코드” 부분을 해결하는 것이다. 테스트 주도 개발 책에서는 '두려움이 지루함으로 변할 때까지 테스트를 만들어라' 라고 하는데요, 결국 지루할 만큼 신뢰도 있고 깨끗한 코드를 만들기 전까지 테스트하라는 것입니다.
+TDD의 목표는 Clean code that works, 작동하는 깨끗한 코드입니다. 이것이 프로그래밍의 주된 목표이고, 그것을 TDD가 돕는다고 생각하는 건데요. TDD를 하며 먼저 “작동하는 코드” 부분을 해결하고 그 다음 “깔끔한 코드” 부분을 해결하는 겁니다.
 
-TDD는 소프트웨어 개발자가 테스트를 실행할 프로덕션 코드를 만들기 전에 테스트를 먼저 작성하는 방식이다. 이 기술의 기본적인 발상은 실제 코드를 작성하기 전에 코드 작성자가 전체적인 설계나 요구 사항에 대해 생각하는 시간을 주는 것이다.
+테스트 주도 개발 책에서는 '두려움이 지루함으로 변할 때까지 테스트를 만들어라' 라고 하는데요, 결국 지루할 만큼 신뢰도 있고 깨끗한 코드를 만들기 전까지 테스트하라고 말합니다.
 
-TDD는 "테스트는 중요하니까 제일 먼저 써!"라는 훈계가 아니라 어떻게 하면 좋은 소프트웨어 디자인을 유도할 수 있는 가에 대한 방법론이었다. "기능 스펙" → "작동하는 코드"로 가는 과정은 쉽지 않다. 하얀 도화지를 어떻게 채울지 막막할 때도 많다. TDD는 이럴 때 유용하다.
+## TDD에 대한 오해
 
-시작부터 테스트를 작성하는 건 내가 작성하는 코드의 사용자의 관점으로 문제를 본다는 걸 의미한다. 유저 입장에선 어떤 인터페이스가 편할지 생각해보고 테스트 코드를 짜며 "사용"해본다. 디자인의 윤곽이 잡히면 구현 코드를 짜 본다. 다시 테스트 코드를 짜며 나의 코드를 "사용"해본다. 반복.
+9
+
+그렇다면 TDD가 오류 없는 완벽한 프로그램을 만드는 데 방점을 둔 것으로 오해할 수 있는데요. 그런 것이 아니라고 합니다.
+
+## 사실은 이렇습니다
+
+10
+
+TDD가 도와주고자 하는 건 테스트를 먼저 작성해야 하는 원칙을 통해 개발자가 코드를 작성하기 전에 전체적인 설계나 요구 사항에 대해 꼼꼼하게 생각할 수 있도록 하여 좋은 소프트웨어 디자인을 유도하고,
+
+또 기능의 스펙, 요건을 코드 상에 남김으로써 협업 혹은 이 코드를 미래에 다른 사람이 볼 때 명확히 이해할 수 있고, 또 협업을 할 때라면 DB 등 공용 로직을 건드리지 않고 개발하여 예기치 못한 문제를 방지할 수 있습니다.
+
+## F.I.R.S.T. 원칙
+
+11
+
+이와 관련하여 클린 코드라는 책에서 TDD가 따른다고 소개된 FIRST 원칙을 보면 좋은데요, 또 환경이나 다른 테스트로부터 독립적일 것을 강조하고 있습니다.
 
 ## TDD cycle
 
-![Screenshot](발표 대본.assets/TDD_Graphic.jpg)
+12
 
-TDD 사이클은 이렇다. 테스트가 필요한 것들의 목록을 모두 적고, 그 동작들의 용례들을 적는다. 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
+앞서 잠시 TDD의 Cycle은 이렇습니다. 테스트가 필요한 것들의 목록을 모두 적고, 그 동작들의 용례들을 적습니다. 그리고 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
 
-cycle만 보면 간단해 보이지만, test가 가능한 코드를 설계하는 것이 중요하다. 왜냐하면 모든 코드가 testable, 테스트 가능하지 않기 때문이다.
+13
 
-testable한 코드를 만드는 것은 '관심사의 분리'를 통해 이루어 진다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙이다.
+cycle만 보면 간단해 보이지만, test가 가능한 코드를 먼저 설계하는 것이 중요합니다. 왜냐하면 모든 코드가 테스트에 적합하지 않기 때문입니다. 이따 보시겠지만 테스트를 작성한다는 것이 곧 코드를 작성한다는 것입니다. 
 
-이것을 지키지 않으면 순식간에 코드가 진흙 덩어리가 되고 만다. 마치 저의 OCR 코드처럼!
+testable한 코드를 잘 만드는 일은 '관심사의 분리' 를 통해 이루어 집니다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙입니다. 
 
-## TDD의 원칙 (from <클린 코드>)
+14
 
-F.I.R.S.T.
+이를 Single Responsibility Principle, 즉 단일 책임 원칙이라고 하는데요, 하나의 모듈은 하나의 책임 만을 가져야 한다는 원칙입니다. TDD의 원칙과 맞닿아 있죠. 이걸 지키려고 하지 않으면 테스트 코드를 짤 수 없을 겁니다.
 
-Fast: 테스트는 빨라야 한다.
+# React 예제로 보는 TDD
 
-Independent: 각 테스트는 독립적이며 실행 순서에 무관하게 동작해야 한다.
+15
 
-Repeatable: 테스트는 어떤 환경에서도 반복 가능해야 한다.
+그럼 이제 React Todo App을 TDD로 구현한 예제를 한 번 보겠습니다.
 
-Self-Validating: 테스트는 bool 값으로 결과를 내야 한다.(Success or Fail)
+재작년 FEConf에서 공유된 내용을 따라서 구현을 해봤는데요. 
 
-Timely: 테스트는 테스트하려는 실제 코드를 구현하기 직전에 구현한다.
+16 
 
-# Live Coding(Todo App 만들기)
+실습에서는 Jest를 사용할 건데, Facebook에서 만들었으며 Weekly download가 무려 만 팔 천 대를 보이고 있네요. Jest가 인기 있는 이유는 Test Runner, Test의 값을 비교해 주는 Test Matcher 등 테스팅에 필요한 다양한 기능을 한 번에 제공하기 때문입니다.
 
-## BDD(Behavior Driven Development)
+17
 
-TDD랑 큰 차이는 없으나, 단위로 생각하는 것이 어렵기 때문에? 어떤 행위 중심으로 생각해본다는 것이다. 상황에 따라 다르게 행동한다는 것이다. 이 때 유용하게 쓰는 것이 describe context it 템플릿이다.
+그리고 React Testing Library의 도움도 함께 받을 겁니다. 코드를 보면서 이해하실 수 있을 것 같아요.
 
-**BDD**는 시나리오를 기반으로 테스트 케이스를 작성하며 함수 단위 테스트를 권장하지 않는다. 이 시나리오는 비개발자가 봐도 이해할 수 있을 정도의 레벨로 작성하는 것을 권장하기 때문에 특수 영어가 없고 이해하기 쉽게 소통 가능한 것은 BDD의 장점으로 기술팀과 비 기술팀 사이에서 협업을 더 효율적으로 진행할 수 있다.
+18
 
-TDD를 근간으로 파생되었기에 테스트 케이스 자체가 요구 사양이 되도록 하는 개발 방식이고 "이 클래스가 어떤 행위를 해야 한다"라는 개념을 문장으로 작성해 행위를 위한 테스트에 집중을 할 수 있다.
+## List 출력
 
-## Todo App 만들기
+### Item
 
-리스트 출력 부분만 구현해 보겠다.
+먼저 Jest의 기본 예시를 살펴보기 위해 투두리스트를 출력해 주는 기능을 TDD로 구현한 것을 보겠습니다.
 
-실습에서는 Jest를 사용할 건데, Facebook에서 만들었으며 좋은 반응을 얻고 있습니다. Weekly download가 무려 만 팔천 대를 보이고 있네요. Jest가 인기 있는 이유는 Test Runner, Test의 값을 비교해 주는 Test Matcher 등 테스팅에 필요한 다양한 기능을 한 번에 제공하기 때문입니다.
+`Item.test.jsx`
+
+먼저 test 함수를 선언하고 옆에는 함수 설명을 적습니다. 할 일 하나인 Item 컴포넌트를 테스트 한다는 것이니 Item이라고 적습니다. 그리고 예시로 넣어서 테스트해 볼 데이터를 선언합니다. 실제 입력을 받거나 DB에서 올 것으로 예상되는 데이터와 같은 것으로 해야겠죠.
+
+그리고 밑은 jest에서 클릭 함수를 만들어 주었다고 이해하면 되고, render 함수를 이용해 실제 렌더링 될 컴포넌트를 import한 다음 그려 줍니다. 필요한 데이터와 함수도 넘겨 주고요. 그리고 거기서 앞서 보셨던 container와 getByText를 통해 DOM의 요소들을 가져옵니다.
+
+expect는 예상되는 결과 값인데요. 위 데이터에서 저는 title과 완료 버튼이 item 컴포넌트에 나올 것을 계획하고 있기 때문에 container에 이 두 글자가 표시될 것을 검증합니다.
+
+마지막으로 클릭을 하는 것처럼 꾸미고, 클릭을 하면 함수가 1회 호출되는지를 검증합니다.
+
+그리고 나서 이렇게 jest를 실행하는 명령어를 실행하면, 지금 제가 다른 코드는 전부 작성을 해놓아서 조금 맞지는 않지만, 이렇게 item이 없기 때문에 상위 컴포넌트에서도 연쇄적으로 오류가 발생한 것입니다. 이제 테스트를 잘 통과하도록 작성합니다.
+
+18
+
+보신 것처럼 Jest는 이런 메서드들을 쓰는데, describe는 작은 단위의 테스트들을 그룹화 하며, it은 테스트 함수이고, expect는 테스트의 결과를 검증해서 많은 matcher 함수, 그러니까 결괏값을 검증하는 함수들과 같이 씁니다.
+
+### List
+
+19
+
+이제 item들로 이루어진 List를 볼 텐데요.
+
+20
+
+그 전에 BDD라는 것에 대해서 잠깐 설명을 드리겠습니다. BDD는 행동 주도 개발이라고 해서, 어떤 맥락이 있는 행위를 테스트 단위로 생각하고, 기존에서 context 함수가 추가되어 행위마다 분기를 해 줍니다. 설명을 비개발자가 봐도 이해할 수 있을 정도로 작성하여 협업에 도움이 된다고 합니다.
+
+`List.test.jsx`
+
+리스트 컴포넌트의 테스트 코드를 볼까요.
+
+우선 테스트가 여러 개니 describe로 묶어 주고, render 함수도 여러 번 쓰일 테니 묶어 줍니다.
+
+그리고 두 가지 행동에 따라 테스트 하는데요, 남은 할 일이 리스트에 존재하는 경우와 존재하지 않는 경우입니다.
+
+그래서 context로 어떤 행동인지 구분을 지어주고, 각각 할 일이 잘 출력 되는지, 혹은 할 일이 없다면 기본으로 설정해 놓은 문구가 출력 되는지 확인을 할 겁니다.
+
+실패를 했다고 가정하고,
+
+`List.jsx`
+
+실제 리스트 컴포넌트로 와서는 경우에 따라 할 일이 없어요 혹은 item들을 렌더링 해 줘야 할 것입니다.
+
+## Redux와 TDD
+
+21
+
+이제 마지막으로 상태 관리와 TDD 이야기인데요.
+
+Redux의 공식 문서를 보면 이렇게 Presentational한 컴포넌트와 Container 컴포넌트를 분리하여 상태에 대한 관심을 컨테이너에서만 관리하라고 말하고 있습니다. TDD가 지향하는 바와도 일치합니다.
+
+### reducer
+
+그래서 상태 관리 함수인 reducer도 이렇게 어떤 결과를 낼 것인지 테스트가 가능합니다. API 함수의 용례를 정확히 명시하니 협업이 수월할 것 같다는 생각이 들었습니다.
 
 
 
-
-
-간단한 코드였지만 이 코드가 복잡하다고 생각해 봅시다. OCR을 촬영하고, 인코딩하고, Google에 보내고, 다시 받아서 JSON을 파싱하여 유저에게 보여 주는 수많은 단계가 의존적으로 이루어졌으나 구분하려는 노력을 하지 않아서 머리 속 진흙처럼 있었죠. 제가 만약 TDD를 적용하려고 노력했다면 먼저 요구 사항을 잘 쪼개어 정리했을 것이고, 어디서 오류가 발생하는지도 단 번에 알게 되었을 겁니다.
+간단한 코드였지만 이 코드가 복잡하다고 생각해 봅시다. OCR을 촬영하고, 인코딩하고, Google에 보내고, 다시 받아서 JSON을 파싱하여 유저에게 보여 주는 수많은 단계가 의존적으로 이루어졌으나 구분하려는 노력을 하지 않아서 머리 속 진흙처럼 있었습니다. 제가 만약 TDD를 적용하려고 노력했다면 먼저 요구 사항을 잘 쪼개어 정리했을 것이고, 어디서 오류가 발생하는지도 단 번에 알게 되었을 겁니다.
 
 # No Silver Bullet
 
-- TDD는 만능이 아니며, 설계 방법론이 아니다. 절대 좋은 설계, 좋은 프로그램, 좋은 유저 경험을 보장하지는 않는다.
-- 좋은 설계 없이 TDD만으로 좋은 설계를 만들 수 있는 것은 아니며, 실제로 많은 테스트를 잘 통과하면서도 좋지 않은, SOLID 원칙에 잘 맞지 않는 코드들이 많다고 한다.
+24 25
+
+이전 TDD 발표에서도 나누셨던 것처럼 TDD는 만능이 아닙니다. No silver bullet이라는 말처럼 좋은 개발, 설계를 보장해 주는 방법론은 없다고 하죠.
+
+26
+
+실제로 테스트를 잘 통과하면서도 좋은 소프트웨어 원칙에 어긋나는 코드들도 많으며,  단기적으로는 적용하기 어렵다는 현실은 가장 큰 장벽이 됩니다.
 
 # 그럼에도 불구하고 TDD를 도입해 볼 이유는
 
-- 지뢰 탐지기
-- 미래의 빅:poop:을 현재의 스몰 :poop:으로 가져와 비용을 절감합니다.
-- 테스팅을 위해 요구 사항을 명확하게 하는 습관이 생기고, 생각도 잘 해보게 된다는 이점이 있다. 
-- 당장 TDD를 도입하기 어렵다면, SRP를 잘 지키는 것부터 시작하고, 내가 사용할 수 있는 최선의 테스트 도구를 사용해보자(Turbo Console Log)
+27
 
-- 미래 코드를 만질 사람들이 좋아할 것이다.
+그럼에도 불구하고 TDD를 도입해 볼 이유가 있다면
 
-- 위의 내용들은 통계로도 증명이 되어 있다. 내용은 이렇습니다. 자세한 내용은 이 링크를 참고하시는 것이 좋다.
+28
 
-- 예제로 스펙이 표현되어 있다는 것이 가장 중요하다. 용례가 전부 나와 있다. 이는 책 테스트 주도 개발 책에도 잘 강조가 되어 있다. 예상되는 결과 그리고 그 결과를 내는 과정을 명확히 적는 것이 TDD라고 할 수 있다. 그래서 테스트를 보면 어떻게 쓰면 되는 거구나 라는 걸 알 수 있다.
+일단 프로젝트 규모가 점점 커진다고 하면, 미래의 큰 위험을 현재의 작은 에러로 가져올 수 있는 좋은 방법이 됩니다
 
-- 결국 TDD는 테스팅 툴이라기 보다 구현에만 집중하는 것이 아니라 인터페이스에 집중해 코드를 작성해 코드의 퀄리티와 시스템 전반의 설계가 향상될 수 있으며, 개발 집중력도 향상될 수 있다고 한다. 저만 해도 이런 강제성이 없을 때는 컴포넌트를 분리하려는 노력 자체가 크게 줄어든다. Clean code를 위한 원칙을 수립한다는 것에 의미가 있다고 본다. 좋은 소프트웨어 디자인을 유도하는 방법론이다. 시작부터 테스트를 작성하는 건 내가 작성하는 코드의 사용자의 관점으로 문제를 본다는 걸 의미한다. 유저 입장에선 어떤 인터페이스가 편할지 생각해보고 테스트 코드를 짜며 사용해본다. 디자인의 윤곽이 잡히면 구현 코드를 짜 본다. 다시 테스트 코드를 짜며 나의 코드를 사용해본다. 반복. 탄탄한 테스트를 바탕으로 더욱 더 과감한 리팩터링도 가능하니 구현 토드의 완성도도 높아진다.
+그리고 가장 중요한 것은 기능 스펙을 명료하게 하고, 좋은 설계를 유도합니다.
 
-- 비즈니스 상황에 따라서 천천히 도입하고, E2E 테스트부터 시작해보라.
+ 또, TDD가 장기적으로는 비용과 시간을 절감한다는 여러 통계들도 있습니다.
+
+29
+
+IEEE나 대학에서 진행한 연구들에서 성과가 입증된 경우들이 있다고 합니다.
+
+30
+
+하지만 역시 도입하기에는 장벽이 있기 때문에, SRP 원칙부터 잘 실천해 console.log()를 찍어 디버깅 하더라도 소요 시간을 줄여 보고, 비즈니스 상황에 따라 천천히 도입하는 것이 좋습니다.
 
 # 참고 문헌
 
+31
+
 발표를 위해서 클린 코드, 테스트 주도 개발과 같은 책들과 컨퍼런스 영상들 그리고 현업 개발자분들의 블로그를 참고했습니다. 링크는 스터디 후에 따로 공유를 드리겠습니다.
-
-## 도서
-
-'Clean Code'(로버트 C. 마틴, 인사이트, 2013.12.24)
-
-''테스트 주도 개발'(켄트 벡, 인사이트, 2014.02.15)
-
-## 영상 & 글
-
-[TDD는 기존 개발 방법론과 뭐가 다르지?(한빛미디어)](https://www.hanbit.co.kr/channel/category/category_view.html?cms_code=CMS6706987091&amp;cate_cd=)
-
-["TDD는 버그를 없애주나요?" 테스트주도개발에 대한 편견과 오해 바로잡기](https://fastcampus.co.kr/story_article_tdd)(패스트캠퍼스)
-
-[프론트엔드 개발자의 TDD 적응하기](https://blog.wadiz.kr/%ED%94%84%EB%A1%A0%ED%8A%B8%EC%97%94%EB%93%9C-%EA%B0%9C%EB%B0%9C%EC%9E%90%EC%9D%98-tdd-%EC%A0%81%EC%9D%91%ED%95%98%EA%B8%B0/)(와디즈 FE개발팀 홍전일)
-
-[프론트엔드에서 TDD가 가능하다는 것을 보여드립니다.(2022 FEConf 최수형)](https://www.youtube.com/watch?v=L1dtkLeIz-M)
-
-[프론트엔드 개발과 테스트 주도 개발(우아한형제들 개발자 김정환님 발표)](https://www.slideshare.net/jeonghwankim11/ss-78600304?refer=%EA%B0%9C%EB%B0%9C%EC%9E%90%EC%8A%A4%EB%9F%BD%EB%8B%A4)
-
-[TDD를 해야 하는 이유](https://www.youtube.com/watch?v=j09W0KSofOk)(코딩의 신 아샬 | 시드웨일)
-
-[TDD의 핵심](https://www.youtube.com/watch?v=Bogx86KKp5o)(코딩의 신 아샬 | 시드웨일)
-
-[Kent Beck의 테스트 주도 개발 책을 읽고.]()(Google Firebase Daniel Lee)
 
 # Outro
 
+32
+
 - 책 대여 가능
 
-이상으로 마치겠습니다. 들어주셔서 감사합니다.
+예제가 주로 프론트엔드 코드여서 이해가 어려우신 부분도 있었을 것 같은데요. TDD의 개념과 원칙은 다르지 않으니 그런 부분을 더 중점적으로 들으셨다면 좋겠습니다. 이상으로 마치겠습니다. 들어주셔서 감사합니다.
