--- a/ETC/TDD/발표 대본.md
+++ b/ETC/TDD/발표 대본.md
@@ -23,11 +23,11 @@
 4
 
 
-그럼에도 불구하고, TDD는 한 번 알아볼 만한 가치가 있다고 생각했습니다.
+이런 현실에도 불구하고, TDD는 한 번 알아볼 만한 가치가 있다고 생각했습니다.
 
 # TDD란?
 
-6
+5 6
 
 TDD, 괜히 영어 약자라서 그렇지 직관적인 의미를 가지고 있습니다. 어떤 기능을 작성할 때 테스트 코드를 작성하고, 그것을 통과하는 코드를 작성하는 방식으로 개발한다고 우선 이해하시면 됩니다. 그래서 "테스트 '기반' 개발" 입니다.
 
@@ -41,7 +41,7 @@ TDD를 집대성했다고 할 수 있는 분은 켄트 벡이라는 개발자인
 
 8
 
-TDD의 목표는 Clean code that works, 작동하는 깨끗한 코드입니다. 이것이 프로그래밍의 주된 목표이고, 그것을 TDD가 돕는다고 생각하는 건데요. TDD를 하며 먼저 “작동하는 코드” 부분을 해결하고 그 다음 “깔끔한 코드” 부분을 해결하는 겁니다.
+TDD의 목표는 Clean code that works, 작동하는 깨끗한 코드입니다. 이것이 프로그래밍의 주된 목표이고, 그것을 TDD가 돕는다고 생각하는 건데요. TDD를 하며 먼저 “작동하는 코드” 부분을 해결하고 그 다음 “깔끔한 코드” 부분을 리팩토링으로 해결하는 겁니다.
 
 테스트 주도 개발 책에서는 '두려움이 지루함으로 변할 때까지 테스트를 만들어라' 라고 하는데요, 결국 지루할 만큼 신뢰도 있고 깨끗한 코드를 만들기 전까지 테스트하라고 말합니다.
 
@@ -55,31 +55,23 @@ TDD의 목표는 Clean code that works, 작동하는 깨끗한 코드입니다. 
 
 10
 
-TDD가 도와주고자 하는 건 테스트를 먼저 작성해야 하는 원칙을 통해 개발자가 코드를 작성하기 전에 전체적인 설계나 요구 사항에 대해 꼼꼼하게 생각할 수 있도록 하여 좋은 소프트웨어 디자인을 유도하고,
+TDD가 도와주고자 하는 건 테스트를 먼저 작성해야 한다는 원칙을 통해 개발자가 코드를 작성하기 전에 전체적인 설계나 요구 사항에 대해 꼼꼼하게 생각할 수 있도록 하여 좋은 소프트웨어 디자인을 유도하고,
 
 또 기능의 스펙, 요건을 코드 상에 남김으로써 협업 혹은 이 코드를 미래에 다른 사람이 볼 때 명확히 이해할 수 있고, 또 협업을 할 때라면 DB 등 공용 로직을 건드리지 않고 개발하여 예기치 못한 문제를 방지할 수 있습니다.
-
-## F.I.R.S.T. 원칙
-
-11
-
-이와 관련하여 클린 코드라는 책에서 TDD가 따른다고 소개된 FIRST 원칙을 보면 좋은데요, 또 환경이나 다른 테스트로부터 독립적일 것을 강조하고 있습니다.
 
 ## TDD cycle
 
 12
 
-앞서 잠시 TDD의 Cycle은 이렇습니다. 테스트가 필요한 것들의 목록을 모두 적고, 그 동작들의 용례들을 적습니다. 그리고 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
+앞서 잠시 들으신 것과 같이, TDD의 Cycle은 이렇습니다. 테스트가 필요한 것들의 목록을 정립하, 그 동작들의 용례들을 적습니다. 그리고 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
 
 13
 
-cycle만 보면 간단해 보이지만, test가 가능한 코드를 먼저 설계하는 것이 중요합니다. 왜냐하면 모든 코드가 테스트에 적합하지 않기 때문입니다. 이따 보시겠지만 테스트를 작성한다는 것이 곧 코드를 작성한다는 것입니다. 
-
-testable한 코드를 잘 만드는 일은 '관심사의 분리' 를 통해 이루어 집니다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙입니다. 
+cycle만 보면 간단해 보이지만, test가 가능한 코드를 먼저 설계하는 것이 중요합니다. 이따 보시겠지만 테스트를 작성한다는 것이 곧 코드가 머리 속에 있다는 것이기 때문입니다. testable한 코드를 잘 만드는 일은 '관심사의 분리' 를 통해 이루어 집니다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙입니다. 
 
 14
 
-이를 Single Responsibility Principle, 즉 단일 책임 원칙이라고 하는데요, 하나의 모듈은 하나의 책임 만을 가져야 한다는 원칙입니다. TDD의 원칙과 맞닿아 있죠. 이걸 지키려고 하지 않으면 테스트 코드를 짤 수 없을 겁니다.
+이를 Single Responsibility Principle, 즉 단일 책임 원칙이라고 하는데요, 하나의 모듈은 하나의 책임만을 가져야 한다는 원칙입니다. TDD의 원칙과 맞닿아 있죠. 좋은 테스트를 
 
 # React 예제로 보는 TDD
 
