--- a/ETC/TDD/발표 대본.md
+++ b/ETC/TDD/발표 대본.md
@@ -63,15 +63,15 @@ TDD가 도와주고자 하는 건 테스트를 먼저 작성해야 한다는 원
 
 12
 
-앞서 잠시 들으신 것과 같이, TDD의 Cycle은 이렇습니다. 테스트가 필요한 것들의 목록을 정립하, 그 동작들의 용례들을 적습니다. 그리고 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
+앞서 잠시 들으신 것과 같이, TDD의 Cycle은 이렇습니다. 테스트가 필요한 것들의 목록을 정립하고, 그 동작들의 용례들을 적습니다. 그리고 우선 실패하는 단위 테스트를 추가한다. 그리고 테스트를 통과하도록 프로덕션 코드를 구현한다. 기능을 훼손하지 않는 선에서 리팩토링하여 중복을 제거한다. 위 과정을 반복한다.
 
 13
 
-cycle만 보면 간단해 보이지만, test가 가능한 코드를 먼저 설계하는 것이 중요합니다. 이따 보시겠지만 테스트를 작성한다는 것이 곧 코드가 머리 속에 있다는 것이기 때문입니다. testable한 코드를 잘 만드는 일은 '관심사의 분리' 를 통해 이루어 집니다. 관심사의 분리란 자신이 관심 갖는 부분에만 관심을 기울이는 소프트웨어 엔지니어링의 원칙입니다. 
+cycle만 보면 간단해 보이지만, test가 가능한 코드를 먼저 설계하는 것이 중요합니다. 이따 보시겠지만 테스트를 작성한다는 것이 곧 코드가 머리 속에 있다는 것이기 때문입니다. testable한 코드를 잘 만드는 일은 '관심사의 분리' 를 통해 이루어 집니다. 관심사의 분리란 컴퓨터 프로그램을 개개의 구별된 부분으로 분리시키는 디자인 원칙인데요.
 
 14
 
-이를 Single Responsibility Principle, 즉 단일 책임 원칙이라고 하는데요, 하나의 모듈은 하나의 책임만을 가져야 한다는 원칙입니다. TDD의 원칙과 맞닿아 있죠. 좋은 테스트를 
+이를 SRP라고 하는 단일 책임 원칙과도 연결할 수 있습니다. 하나의 모듈은 하나의 책임 만을 가져야 한다는 원칙입니다. 이렇게 TDD는 좋은 설계 아래서 잘 이루어 질 수 있고, 역으로 TDD가 좋은 설계를 하기 위한 좋은 자극이 되어 주기도 한다고 합니다.
 
 # React 예제로 보는 TDD
 
