--- a/ETC/TDD/발표 대본.md
+++ b/ETC/TDD/발표 대본.md
@@ -153,13 +153,13 @@ Redux의 공식 문서를 보면 이렇게 Presentational한 컴포넌트와 Con
 
 
 
-간단한 코드였지만 이 코드가 복잡하다고 생각해 봅시다. OCR을 촬영하고, 인코딩하고, Google에 보내고, 다시 받아서 JSON을 파싱하여 유저에게 보여 주는 수많은 단계가 의존적으로 이루어졌으나 구분하려는 노력을 하지 않아서 머리 속 진흙처럼 있었습니다. 제가 만약 TDD를 적용하려고 노력했다면 먼저 요구 사항을 잘 쪼개어 정리했을 것이고, 어디서 오류가 발생하는지도 단 번에 알게 되었을 겁니다.
+간단한 코드였지만 이 코드가 복잡하다고 생각해보면, 요구 사항을 기능 별로 명확히 생각하고 구분 지어 테스트를 작성하면서 설계가 명료해지는 장점이 있을 것 같다고 생각했습니다.
 
 # No Silver Bullet
 
 24 25
 
-이전 TDD 발표에서도 나누셨던 것처럼 TDD는 만능이 아닙니다. No silver bullet이라는 말처럼 좋은 개발, 설계를 보장해 주는 방법론은 없다고 하죠.
+이전 TDD 발표에서 이야기 나누셨던 것처럼 TDD는 만능이 아닙니다. No silver bullet이라는 말처럼 좋은 개발, 설계를 보장해 주는 방법론은 없다고 하죠.
 
 26
 
@@ -173,19 +173,17 @@ Redux의 공식 문서를 보면 이렇게 Presentational한 컴포넌트와 Con
 
 28
 
-일단 프로젝트 규모가 점점 커진다고 하면, 미래의 큰 위험을 현재의 작은 에러로 가져올 수 있는 좋은 방법이 됩니다
+일단 프로젝트 규모가 점점 커진다고 하면, 미래의 큰 에러의 위험을 현재의 작은 에러로 가져올 수 있는 좋은 방법이 됩니다
 
 그리고 가장 중요한 것은 기능 스펙을 명료하게 하고, 좋은 설계를 유도합니다.
 
  또, TDD가 장기적으로는 비용과 시간을 절감한다는 여러 통계들도 있습니다.
 
-29
 
-IEEE나 대학에서 진행한 연구들에서 성과가 입증된 경우들이 있다고 합니다.
 
 30
 
-하지만 역시 도입하기에는 장벽이 있기 때문에, SRP 원칙부터 잘 실천해 console.log()를 찍어 디버깅 하더라도 소요 시간을 줄여 보고, 비즈니스 상황에 따라 천천히 도입하는 것이 좋습니다.
+하지만 역시 도입하기에는 장벽이 있기 때문에, SRP 원칙부터 잘 실천해 평소 하던 디버깅에 드는 시간을 줄여 보고, 비즈니스 상황에 따라 천천히 도입하는 것이 좋다는 생각이 듭니다.
 
 # 참고 문헌
 
@@ -199,4 +197,5 @@ IEEE나 대학에서 진행한 연구들에서 성과가 입증된 경우들이 
 
 - 책 대여 가능
 
-예제가 주로 프론트엔드 코드여서 이해가 어려우신 부분도 있었을 것 같은데요. TDD의 개념과 원칙은 다르지 않으니 그런 부분을 더 중점적으로 들으셨다면 좋겠습니다. 이상으로 마치겠습니다. 들어주셔서 감사합니다.
+예제가 주로 프론트엔드 코드여서 이해가 어려우신 부분도 있었을 것 같은데요. TDD의 개념과 원칙은 다르지 않으니 그런 부분을 더 중점적으로 들으셨다면 좋겠습니다. 발표는 여기서 마치겠습니다. 들어주셔서 감사합니다.
+
