--- a/Back-end/Nestjs/탄탄한-백엔드-NestJS-기초부터-심화까지/01-첫-시작/01-강좌-소개.md
+++ b/Back-end/Nestjs/탄탄한-백엔드-NestJS-기초부터-심화까지/01-첫-시작/01-강좌-소개.md
@@ -6,7 +6,7 @@
 
 Typescript를 지원하는 효율적이고 확장 가능한 Node.js의 서버 애플리케이션 프레임워크다. Express나 Fastify와 같은 강력한 서버 프레임워크 위에 고도화된 아키텍쳐를 제공해서 확장 가능하며 유지보수가 쉬운 아주 견고한 서버 애플리케이션을 쉽게 개발하도록 도와준다.
 
-실제로 Node.js를 사용하는 많은 기업들이 Express에서 Next.js로 리팩토링을 하고 있다. 아디다스, 당근마켓 등 많은 스타트업들이 Nest.js로 신규 프로젝트를 개발하고 있다.
+실제로 Node.js를 사용하는 많은 기업들이 Express에서 Nest.js로 리팩토링을 하고 있다. 아디다스, 당근마켓 등 많은 스타트업들이 Nest.js로 신규 프로젝트를 개발하고 있다.
 
 Next.js는 객체지향의 끝이라고 불리는 Java와 매우 유사해서, 기존의 Java 개발자들도 쉽게 배울 수 있다. Express 위에서 Nest.js 구조를 입혀 개발할 수 있어 Express 개발자들도 쉽게 배울 수 있다. Next.js를 위한 Express 기본, 디자인 패턴들을 알려줄 예정이고, 이를 기반으로 철저하게 공식문서 기반으로 Next.js의 객체지향, 디자인 패턴을 배울 예정이다. 공식문서에 있는 고양이 예제를 확장하여 직접 API를 개발하는 시간을 갖는다. 마지막으로는 프로젝트를 진행하는데, 상업용 소프트웨어를 제품으로 만들 때 필수적으로 사용하는 패턴(데이터 베이스 연결 및 관리, 로그인, 회원가입, 미디어 파일 업로드)들을 익힌다. 이를 통해 스스로 서비스를 만들 수 있도록 도와 준다.
 
